<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.activities.MainActivity">

    <TextView
        android:id="@+id/menuTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/press_start_2p_regular"
        android:text="@string/menuTitleText"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <Button
        android:id="@+id/singlePlayerGameButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/press_start_2p_regular"
        android:onClick="onSinglePlayerButtonClick"
        android:paddingTop="12dp"
        android:text="@string/singlePlayerGameBtnText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/menuTitleTextView"
        app:layout_constraintStart_toStartOf="@+id/menuTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/menuTitleTextView" />

    <Button
        android:id="@+id/networkMultiplayerGameButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/press_start_2p_regular"
        android:onClick="onNetworkMultiplayerPlayerButtonClick"
        android:paddingTop="12dp"
        android:text="@string/networkMultiPlayerGameBtnText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/singlePlayerGameButton"
        app:layout_constraintStart_toStartOf="@+id/singlePlayerGameButton"
        app:layout_constraintTop_toBottomOf="@+id/singlePlayerGameButton" />

</androidx.constraintlayout.widget.ConstraintLayout>